Add description of media file json format

--- a/documentation_builder/mminte.ipynb
+++ b/documentation_builder/mminte.ipynb
@@ -21,7 +21,15 @@
     "   in the same model.\n",
     "2. There can be only one objective to optimize for growth in each source model.\n",
     "3. Exchange reactions are identified by an 'EX\\_' prefix on the reaction ID.\n",
-    "4. Exchange reactions have only one metabolite with a negative coefficient.\n"
+    "4. Exchange reactions have only one metabolite with a negative coefficient.\n",
+    "\n",
+    "A media file is in JSON format and contains a dictionary with an exchange reaction ID as the key and lower and upper bounds of the exchange reaction as the value. For example,\n",
+    "\n",
+    "    {'EX_h2o': [0.0, 1000.0],\n",
+    "     'EX_h2s': [-1.0, 1000.0],\n",
+    "     'EX_pi': [-10.0, 1000.0],\n",
+    "     ...\n",
+    "    }\n"
    ]
   },
   {
@@ -175,7 +183,7 @@
        "      <td>KP</td>\n",
        "      <td>Amensalism</td>\n",
        "      <td>0.545572</td>\n",
-       "      <td>-2.238778e-14</td>\n",
+       "      <td>3.556715e-14</td>\n",
        "      <td>0.545572</td>\n",
        "      <td>0.169338</td>\n",
        "      <td>0.510884</td>\n",
@@ -205,7 +213,7 @@
        "1   BT   HP    Parasitism  0.500853  3.645653e-02    0.464396  0.440738   \n",
        "2   BT   KP    Parasitism  0.586633  0.000000e+00    0.586633  0.440738   \n",
        "3   FP   HP  Commensalism  0.431667  1.775634e-01    0.254104  0.169338   \n",
-       "4   FP   KP    Amensalism  0.545572 -2.238778e-14    0.545572  0.169338   \n",
+       "4   FP   KP    Amensalism  0.545572  3.556715e-14    0.545572  0.169338   \n",
        "5   HP   KP    Amensalism  0.540178  0.000000e+00    0.540178  0.197557   \n",
        "\n",
        "    B_ALONE  A_CHANGE  B_CHANGE  \n",
